[package]
name = "node-pipewire"
version = "1.0.0"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pipewire = "0.5"
serde_json = "1.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
