[package]
name = "node-pipewire"
version = "1.0.0"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
pipewire = "0.7.2"
serde_json = "1.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["channel-api", "napi-6", "promise-api"]

# Compilation target for the native code
[package.metadata.cross.target.x86_64-unknown-linux-gnu]
dockerfile = 'dockerfiles/Dockerfile.x86_64'

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
dockerfile = 'dockerfiles/Dockerfile.aarch64'

[package.metadata.cross.target.arm-unknown-linux-gnueabihf]
dockerfile = 'dockerfiles/Dockerfile.armhf'